# tess_atlas_slurm_utils

./: .gitignore  README.md  make_slurm_job  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
slurm_job_generator/: file_generators.py  slurm_job_generator.py  slurm_toi_data_interface.py  slurm_utils.py
slurm_job_generator/templates/: submit_template.sh
src/tess_atlas_slurm_utils/: file_generators.py  make_slurm_job.py  slurm_job_generator.py  toi_data_interface.py  utils.py
src/tess_atlas_slurm_utils/slurm_job_generator/: file_generators.py  slurm_job_generator.py  slurm_utils.py
src/tess_atlas_slurm_utils/slurm_job_generator/templates/: slurm_template.sh  submit_template.sh
tess_atlas_slurm_utils/: __init__.py  cli.py  file_generators.py  jobstats_collector.py  slurm_job_generator.py  toi_data_interface.py  utils.py
tess_atlas_slurm_utils/templates/: submit_template.sh
tests/: conftest.py  test_slurm_job_generator.py
